--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,8 @@
   <div class="alert alert-info" role="alert">Please open console to see logging messages while using the app</div>  
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
-      <app-active-users
-        [users]="activeUsers">
-      </app-active-users>
-      <app-inactive-users
-        [users]="inactiveUsers">
-      </app-inactive-users>
+      <app-active-users></app-active-users>
+      <app-inactive-users></app-inactive-users>
     </div>
     <!--
       Optimize this app by adding a UsersService which manages the active and inactive users.
